fixing change block

--- a/sample/index.html
+++ b/sample/index.html
@@ -50,12 +50,178 @@
 
 <script src="../build/ckeditor.js"></script>
 <script>
-	const editorData = `<h2>Sample</h2>
-		<p>This is an instance of the <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/overview.html#document-editor">document editor build</a>.</p>
-		<figure class="image">
-			<img src="../tests/manual/sample.jpg" alt="Autumn fields" />
-		</figure>
-		<p>You can use this sample to validate whether your <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a> works fine.</p>`;
+	const editorData = `
+	<p>Chapter 10 – Lexical, Syntactic, and Case Marking Particles</p>
+<p><span class="tibetan">ཚིག་ཕྲད་</span> &nbsp;traditional Tibetan study of particles</p>
+<p>In our system (a little narrower than <span class="tibetan">ཚིག་ཕྲད་</span>), there are three main classes of particles:</p>
+<p>&nbsp; &nbsp;1. lexical particles</p>
+<p>&nbsp; &nbsp;2. case marking particles</p>
+<p>&nbsp; &nbsp;3. syntactic particles</p>
+<p>Lexical Particles</p>
+<p>Lexical particles are units, usually made up of one or two syllables, that serve as parts of words. They do not function independently of words.</p>
+<p>For example, <span class="tibetan">བུམ་པ་</span> may be made plural by adding a lexical particle: <span class="tibetan">བུམ་པ་རྣམས་</span></p>
+<p>The following examples illustrate the use of particles:</p>
+<p><span class="tibetan">བློ་</span> &nbsp;mind</p>
+<p><span class="tibetan">ཡུལ་</span> &nbsp;object (also place and region)</p>
+<p><span class="tibetan">ཡུལ་ཅན་</span> &nbsp;subject [object-possessor]</p>
+<p><span class="tibetan">རྟོག་པ་</span> &nbsp;thought, conceptuality</p>
+<p><span class="tibetan">རྟོག་བཅས་</span> conceptual</p>
+<p><span class="tibetan">རྟོག་མེད་</span> &nbsp;non-conceptual</p>
+<p><span class="tibetan">ཅན་</span> means possessing. <span class="tibetan">ཡུལ་ཅན་</span> literally translates as “object possessor”.</p>
+<p><span class="tibetan">བཅས་</span> also means possessing, but is short for <span class="tibetan">དང་བཅས་པ་</span>, thus རྟོག་བཅས་ is actually རྟོག་དང་བཅས་པ་, meaning possessing conceptuality.</p>
+<p>&nbsp;</p>
+<p>The five types of lexical particles</p>
+<p>&nbsp; &nbsp;1. prefix particles, such as རྣམ་པར་ in རྣམ་པར་ཤེས་པ་ (consciousness)</p>
+<p>&nbsp; &nbsp;2. negative prefix particles, such as མ་ in མ་ཡིན་</p>
+<p>&nbsp; &nbsp;3. final syllables, such as the པ་ in བུམ་པ་ and ཡོད་པ་; and the three syllable particle དང་བཅས་པ་ in རྟོག་པ་དང་བཅས་པ་</p>
+<p>&nbsp; &nbsp;4. optional suffix syllable, such as pluralizers དག་ and རྣམས་</p>
+<p>&nbsp; &nbsp;5. negative verbal particles, such as མེད་པ་ in རྟོག་པ་མེད་པ་ (without conceptuality, abbreviated རྟོག་མེད་)</p>
+<p>&nbsp;</p>
+<p>The following are Tibetan translations of Sanskrit prefixes:</p>
+<p>རྣམ་པར་ &nbsp;vi-- &nbsp;very, most, completely, fully</p>
+<p>རྗེས་སུ་ &nbsp;anu-- &nbsp;after, subsequent</p>
+<p>ཀུན་ཏུ་ &nbsp;??</p>
+<p>མངོན་པར་ &nbsp;??</p>
+<p>&nbsp;</p>
+<p>Verbal Nouns and Adjectives</p>
+<p>Any word ending in one of these final syllables is either a noun or an adjective: པ་, པོ, བ, བོ, མ, མོ. Final verbs never end in these syllables.</p>
+<p>Many nouns and adjectives are made by affixing one of these syllables to a verb. These are called verbals.</p>
+<p>Whereas མེད་ means to not exist, མེད་པ་ means nonexistent.</p>
+<p>Verbals act like verbs in many ways. They may have subjects and objects, but they are nouns or adjectives and are themselves the subjects or objects of other verbs.</p>
+<p>བསྟན་ can be made into a verbal བསྟན་པ་</p>
+<p>སངས་རྒྱས་རྐྱིས་ཆོས་བསྟན་ &nbsp;The Buddha taught the doctrine.</p>
+<p>སངས་རྒྱས་རྐྱིས་ཆོས་བསྟན་པ་ &nbsp;Buddha’s having taught the doctrine…</p>
+<p>སངས་རྒྱས་རྐྱིས་བསྟན་པ་ &nbsp;taught by the Buddha..., that taught by the Buddha...</p>
+<p>Syntactic Particles</p>
+<p>Syntactic particles do not have their own lexical meaning. They are used to connect words, phrases, and clauses to one another. They are not part of words—yet cannot function independently of words.</p>
+<p>&nbsp;</p>
+<p>Connects nouns, pronouns, and adjectives.</p>
+<p>དང་ &nbsp;and</p>
+<p>དཀར་པོ་དང་དམར་པོ་ &nbsp;white and red</p>
+<p>&nbsp;</p>
+<p>Introduce phrases, clauses, and sentences:</p>
+<p>གཞན་ཡང་ &nbsp;moreover</p>
+<p>དེས་ན་ &nbsp;therefore</p>
+<p>ཡང་ན་ &nbsp;alternatively</p>
+<p>&nbsp;</p>
+<p>Similar to a punctuation mark:</p>
+<p>ནི་ &nbsp;like a colon</p>
+<p>མི་རྟག་པ་ནི་ &nbsp;– མི་རྟག་པ་ is the topic to be discussed and the discussion will immediately follow the ནི་</p>
+<p>ནི་ &nbsp;may also mark the noun or noun phrase as a section heading</p>
+<p>&nbsp;</p>
+<p>Ends clauses that present a reason:</p>
+<p>ཕྲིར་ &nbsp;because</p>
+<p>ཡོད་པའི་ཕྲིར་ &nbsp;because of existing</p>
+<p>ཕྲིར་ is one of the most common syntactic particles in philosophical texts, since it ends clauses that present reasons. Like the postpositions, it is connected to the clause it ends with a connective case marking particle. However, unlike the postpositions, it is not declined.</p>
+<p>&nbsp;</p>
+<p>Terminators, function like a period:</p>
+<p>ནོ་ ངོ་ དོ་ ཏོ་ མོ་ འོ་ རོ་ ལོ་ སོ་ &nbsp;</p>
+<p>སེམས་ཡིད་རྣམ་པར་ཤེས་པ་དོན་གཅིག་ནོ། &nbsp;Mind, mentality, and consciousness are equivalent.</p>
+<p>Doctrinal Vocabulary and Grammar – Cyclic Existence</p>
+<p>&nbsp;</p>
+<p>འཁོར་བ་ &nbsp;saṃsāra, cyclic existence</p>
+<p>&nbsp; &nbsp;• འདོད་པའི་ཁམས་ / འདོད་ཁམས་ &nbsp;desire realm</p>
+<p>&nbsp; &nbsp;• གཟུགས་ཀྱི་ཁམས་ / གཟུགས་ཁམས་ &nbsp;form realm</p>
+<p>&nbsp; &nbsp;• གཟུགས་མེད་པའེ་ཁམས་ / གཟུགས་མེད་ཁམས་ formless realm</p>
+<p>འཁོར་ལོ་ &nbsp;wheel</p>
+<p>འཁོར་ &nbsp;(v) turn</p>
+<p>མྱ་ངན་ལས་འདས་པ་ &nbsp;[sorrow-from-passed] nirvāṇa</p>
+<p>འཁོར་འདས་ &nbsp;(abbr.) saṃsāra and nirvāṇa</p>
+<p>ཁམས་ &nbsp;realm</p>
+<p>Only gods and goddesses are born in the Form and Formless Realms. All six types of rebirths are found in the desire realm (not just human and gods).</p>
+<p>དམྱལ་བ་པ་ &nbsp;hell beings</p>
+<p>ཡི་དྭགས་ &nbsp;hungry ghosts</p>
+<p>དུད་འགྲོ་ &nbsp;animals</p>
+<p>མི་ &nbsp;humans</p>
+<p>ལྷ་མ་ཡིན་ &nbsp;demigods</p>
+<p>ལྷ་ &nbsp;gods</p>
+<p>&nbsp;</p>
+<p>དམྱལ་བ་ hell</p>
+<p>&nbsp;</p>
+<p>Tibetan does not speak of the six types of “rebirths”, but more often births, སྐྱེ་བ་, or migrators/go-ers, འགྲོ་བ་</p>
+<p>སྐྱེ་བ་ &nbsp;births</p>
+<p>འགྲོ་བ་ &nbsp;migrations, migrators, goers</p>
+<p>སེམས་ཅན་ &nbsp;sentient being (means animal in colloquial, but in classical means all sentient beings)</p>
+<p>གང་ཟག་ &nbsp;person</p>
+<p>&nbsp;</p>
+<p>ཉོན་མོངས་ &nbsp;afflictions, kleśa</p>
+<p>དུག་གསུམ་ &nbsp;three poisons</p>
+<p>&nbsp; &nbsp;• འདོད་ཆགས་ &nbsp;attachment or desire</p>
+<p>&nbsp; &nbsp;• ཞེ་སྡང་ &nbsp;aversion or hatred</p>
+<p>&nbsp; &nbsp;• གཏི་མུག་ &nbsp;obscuration, same as མ་རིག་པ་, ignorance</p>
+<p>ལས་དང་ཉོན་མོངས་ &nbsp;karma and afflictions, the causes of cyclic existence</p>
+<p>ལས་ཉོན་ &nbsp;abbr. or ལས་དང་ཉོན་མོངས་</p>
+<p>ཟག་བཅས་ &nbsp;contaminated, tainted</p>
+<p>ལས་ that has been ཟག་བཅས་ by being motivated by one of the དུག་གསུམ་ causes འཁོར་བ་</p>
+<p>Vocabulary (pp. 180)</p>
+<p>Nouns</p>
+<p>འཁོར་འདས་ cyclic existence and nirvana</p>
+<p>འཁོར་བ་ cyclic existence</p>
+<p>གླང་པོ་ཆེ་ elephant</p>
+<p>གླིང་ island, continent</p>
+<p>རྒྱལ་པོ་ king</p>
+<p>རྒྱལ་བ་ conqueror</p>
+<p>རྒྱལ་མོ་ queen</p>
+<p>འཇིག་པ་ disintegration</p>
+<p>ཉ་ fish</p>
+<p>གཏི་མུག་ obscuration</p>
+<p>ཐེག་པ་ཆེན་པོ་ great vehicle [Mahāyāna]</p>
+<p>ཐེག་པ་ vehicle</p>
+<p>རྟོག་མེད་ non-conceptual</p>
+<p>སྟག་ tiger</p>
+<p>དུག་ poison</p>
+<p>དུད་འགྲོ་ animal</p>
+<p>འདོད་ཁམས་ Desire Realm</p>
+<p>འདོད་ཆགས་ desire, attachment</p>
+<p>ཕག་པ་ pig</p>
+<p>ཕྲ་མོ་ subtle</p>
+<p>བ་གླང་ ox</p>
+<p>བྱ་ bird</p>
+<p>སྦྲུལ་ snake</p>
+<p>མ་འོངས་པ་ future</p>
+<p>དམིགས་པ་ observation, object of observation</p>
+<p>དམྱལ་བ་ hell</p>
+<p>ཚིག་ word</p>
+<p>ཙིག་ཕྲད་ particle</p>
+<p>འཛམ་བུའི་གླིང་ Jambu Continent</p>
+<p>ཟག་པ་ contamination</p>
+<p>ཟག་བཅས་ contaminated</p>
+<p>ཟབ་མོ་ profound</p>
+<p>གསུགས་ཁམས་ Form Realm</p>
+<p>གསུགས་མེད་ཁམས་ Formless Realm</p>
+<p>ཞེ་སྡང་ hatred</p>
+<p>ཡི་དྭགས་ hungry ghost, preta</p>
+<p>ཡུལ་ object, place</p>
+<p>ཡུལ་ཅན་ subject</p>
+<p>རིམ་པ་ stage</p>
+<p>སེང་གི་ lion</p>
+<p>སྲུང་མ་ guardian</p>
+<p>ལྷ་མ་ཡིན་ demigod, asura</p>
+<p>Verbs</p>
+<p>སྐྱེ་ is born, arise – III</p>
+<p>འཇིག་ destroy, dissolve, do away with, smash – V</p>
+<p>འཇིག་ disintegrate, rot, crumble away – III</p>
+<p>འདའ་ pass [beyond], transcend – IV p227</p>
+<p>འདས་ past form of འདའ་</p>
+<p>འདོད་ wish, assert, claim [that] – V p238</p>
+<p>མིན་ is not – I/linking</p>
+<p>མེད་ does not exist – II, Verb of existence</p>
+<p>དམིགས་ observe, take as an object – VI p348</p>
+<p>འོང་ come, arrive, come about – III p408</p>
+<p>འོངས་ past of འོང་</p>
+<p>རིག་ know – III p419</p>
+<p>Adjectives</p>
+<p>དགེ་བ་ virtuous, wholesome</p>
+<p>ཆེན་པོ་ large, great</p>
+<p>འཇིག་པ་ disintegrating</p>
+<p>ཐ་དད་ different</p>
+<p>ཐ་མི་དད་ non-different, not different</p>
+<p>མི་དགེ་བ་ non-virtuous, unwholesome</p>
+<p>མི་འཇིག་པ་ non-disintegrating</p>
+<p>Syntactic Particles</p>
+<p>གཞན་ཡང་ moreover</p>
+<p>ཡང་ན་ alternatively</p>
+	`;
 
 	DecoupledEditor.create( editorData )
 	.then( editor => {
