fixed tibetan mark selection bug

--- a/sample/index.html
+++ b/sample/index.html
@@ -46,6 +46,9 @@
 		background: white;
 		box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 	}
+	.tibetan {
+		font-size:160%;
+	}
 </style>
 
 <script src="../build/ckeditor.js"></script>
