fixing bug in tibetan marks selection

--- a/sample/index.html
+++ b/sample/index.html
@@ -54,6 +54,7 @@
 <script src="../build/ckeditor.js"></script>
 <script>
 	const editorData = `
+	<h3>Verb Forms</h3><p>Three fundamental verb forms:</p><p>the <strong>basic</strong> verb (such as བྱེད་, རྟོགས་, ཡིན་, དྲན་)</p><p>the <strong>simple infinitive</strong> (such as དྲན་དུ་, རྟོགས་སུ་)</p><p>the <strong>verbal infinitive</strong> (such as དྲན་པར་, ཡིན་པར་, རྟོགས་པར་)</p><p>Basic verbs end sentences, with the possible addition of a second, modifying verb (such as རྟོགས་དགོས་). Infinitives do not end sentences. Tibetan infinitives sometimes may but often do not translate into the direct English equivalent, such as <i>to remember</i> or <i>to meditate.</i>&nbsp;</p><p>For example, བསྒོམ་པར་བྱ – from the basic verb བསྒོམ་, the future tense of སྒོམ་ (<i>to meditate) – </i>means <i>should meditate </i>or<i> will meditate</i> (not <i>will perform to meditate</i>).</p><p><br><br>&nbsp;</p>
 	<p>Chapter 10 – Lexical, Syntactic, and Case Marking Particles</p>
 <p><span class="tibetan">ཚིག་ཕྲད་</span> &nbsp;traditional Tibetan study of particles</p>
 <p>In our system (a little narrower than <span class="tibetan">ཚིག་ཕྲད་</span>), there are three main classes of particles:</p>
